rakuten/enforce-faultdomain-for-replication-1/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-faultdomain-and-backup-for-replication-1
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
